--- a/styles.css
+++ b/styles.css
@@ -72,12 +72,24 @@ h1 {
         flex-direction: column;
         gap: 30px;
         padding: 15px;
+        width: 100%;
+    }
+
+    .left-content {
+        width: 100%;
+        margin-bottom: 20px;
     }
 
     .chart-container {
-        width: 100%;
-        height: 400px;
-        min-width: unset;
+        width: 100vw;
+        height: 500px;
+        margin-left: calc(-50vw + 50%);
+        margin-right: calc(-50vw + 50%);
+        position: relative;
+        left: 50%;
+        right: 50%;
+        padding: 20px;
+        border-radius: 0;
     }
 }
 
@@ -89,37 +101,37 @@ h1 {
 
     h1 {
         font-size: 2rem;
+        margin-bottom: 30px;
     }
 
     .chart-container {
-        height: 350px;
-        margin: 0 -15px;
-        padding: 15px;
-        border-radius: 0;
+        height: 450px;
     }
 }
 
 @media (max-width: 480px) {
     body {
-        padding: 10px;
+        padding: 0;
     }
 
     .page-container {
-        padding: 10px;
+        padding: 15px;
     }
 
     .puppy-container {
         width: 150px;
         height: 150px;
+        margin-bottom: 15px;
     }
 
     h1 {
         font-size: 1.5rem;
+        margin-bottom: 25px;
     }
 
     .chart-container {
-        height: 300px;
-        padding: 10px;
-        margin: 0 -10px;
+        height: 400px;
+        padding: 15px;
+        background: rgba(255, 255, 255, 0.95);
     }
 }
